--- a/projects/system/project/system.vcxproj
+++ b/projects/system/project/system.vcxproj
@@ -138,7 +138,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>C:\Libraries\boost;</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4715</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4715; 26451</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
