--- a/projects/system/project/system.vcxproj.filters
+++ b/projects/system/project/system.vcxproj.filters
@@ -32,6 +32,9 @@
     <Filter Include="source\python">
       <UniqueIdentifier>{19a7d31a-33e3-46d4-ae62-4181ac6636f8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="source\teacher">
+      <UniqueIdentifier>{afaf7d13-e3ea-4112-a3b9-401a84a1a329}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\shared\source\logger\logger.cpp">
@@ -58,6 +61,9 @@
     <ClCompile Include="..\..\shared\source\python\python.cpp">
       <Filter>source\python</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\teacher\teacher.cpp">
+      <Filter>source\teacher</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\shared\source\logger\logger.hpp">
@@ -80,6 +86,9 @@
     </ClInclude>
     <ClInclude Include="..\..\shared\source\python\python.hpp">
       <Filter>source\python</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\teacher\teacher.hpp">
+      <Filter>source\teacher</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
