--- a/projects/system/project/system.vcxproj
+++ b/projects/system/project/system.vcxproj
@@ -159,10 +159,10 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>BOOST_DISABLE_PRAGMA_MESSAGE;HAVE_SNPRINTF;_CRT_SECURE_NO_WARNINGS;NDEBUG;BOOST_CONFIG_SUPPRESS_OUTDATED_MESSAGE; _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SFML_STATIC;BOOST_DISABLE_PRAGMA_MESSAGE;HAVE_SNPRINTF;_CRT_SECURE_NO_WARNINGS;NDEBUG;BOOST_CONFIG_SUPPRESS_OUTDATED_MESSAGE; _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>C:\Libraries\boost;C:\Libraries\sfml\include;C:\Libraries\python\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Libraries\boost;C:\Libraries\sfml\include;C:\Libraries\python\include;C:\Libraries\json\include</AdditionalIncludeDirectories>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <DisableSpecificWarnings>4715; 26451; 26495; 26812;</DisableSpecificWarnings>
     </ClCompile>
@@ -172,7 +172,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\Libraries\sfml\lib;C:\Libraries\boost\stage\lib;C:\Libraries\python\libs</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sfml-audio.lib;sfml-graphics.lib;sfml-main.lib;sfml-network.lib;sfml-system.lib;sfml-window.lib;libboost_python37-vc142-mt-x64-1_73.lib;libboost_atomic-vc142-mt-x64-1_73.lib;libboost_chrono-vc142-mt-x64-1_73.lib;libboost_container-vc142-mt-x64-1_73.lib;libboost_context-vc142-mt-x64-1_73.lib;libboost_contract-vc142-mt-x64-1_73.lib;libboost_coroutine-vc142-mt-x64-1_73.lib;libboost_date_time-vc142-mt-x64-1_73.lib;libboost_exception-vc142-mt-x64-1_73.lib;libboost_fiber-vc142-mt-x64-1_73.lib;libboost_filesystem-vc142-mt-x64-1_73.lib;libboost_graph-vc142-mt-x64-1_73.lib;libboost_iostreams-vc142-mt-x64-1_73.lib;libboost_locale-vc142-mt-x64-1_73.lib;libboost_log_setup-vc142-mt-x64-1_73.lib;libboost_log-vc142-mt-x64-1_73.lib;libboost_math_c99f-vc142-mt-x64-1_73.lib;libboost_math_c99l-vc142-mt-x64-1_73.lib;libboost_math_c99-vc142-mt-x64-1_73.lib;libboost_math_tr1f-vc142-mt-x64-1_73.lib;libboost_math_tr1l-vc142-mt-x64-1_73.lib;libboost_math_tr1-vc142-mt-x64-1_73.lib;libboost_prg_exec_monitor-vc142-mt-x64-1_73.lib;libboost_program_options-vc142-mt-x64-1_73.lib;libboost_random-vc142-mt-x64-1_73.lib;libboost_regex-vc142-mt-x64-1_73.lib;libboost_serialization-vc142-mt-x64-1_73.lib;libboost_stacktrace_noop-vc142-mt-x64-1_73.lib;libboost_stacktrace_windbg_cached-vc142-mt-x64-1_73.lib;libboost_stacktrace_windbg-vc142-mt-x64-1_73.lib;libboost_system-vc142-mt-x64-1_73.lib;libboost_test_exec_monitor-vc142-mt-x64-1_73.lib;libboost_thread-vc142-mt-x64-1_73.lib;libboost_timer-vc142-mt-x64-1_73.lib;libboost_type_erasure-vc142-mt-x64-1_73.lib;libboost_unit_test_framework-vc142-mt-x64-1_73.lib;libboost_wave-vc142-mt-x64-1_73.lib;libboost_wserialization-vc142-mt-x64-1_73.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics-s.lib;sfml-window-s.lib;sfml-system-s.lib;opengl32.lib;freetype.lib;winmm.lib;gdi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
